<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main" translatable="false">白果医生版</string>
    <string name="app_name" translatable="false">百裕EDC系统</string>
    <string name="app_case_db" translatable="false">电子病历</string>
    <string name="app_pub_infos" translatable="false">信息公告</string>
    <string name="update_notice" translatable="false">温馨提示</string>
    <string name="update_text" translatable="false">检测到新版本，是否更新？</string>
    <string name="action_search" translatable="false">搜索</string>
    <string name="register" translatable="false">注册</string>
    <string name="register_account" translatable="false">注册账号</string>
    <string name="guest_account" translatable="false">游客账号</string>
    <string name="get_back_password" translatable="false">找回密码</string>
    <string translatable="false" name="register_immi">立即注册</string>
    <string translatable="false" name="tag">设置标签</string>
    <string translatable="false" name="delTag">删除标签</string>
    <string translatable="false" name="exit">退出</string>
    <string translatable="false" name="back">返回</string>
    <string translatable="false" name="username">用户名：</string>
    <string translatable="false" name="password">密　码：</string>
    <string translatable="false" name="login">登 录</string>
    <string translatable="false" name="login_now">立即登录</string>
    <string translatable="false" name="logout">退出登录</string>
    <string translatable="false" name="storepassword">记住密码</string>
    <string translatable="false" name="confirm">提交</string>
    <string translatable="false" name="next_step">下一步</string>
    <string translatable="false" name="audit_text">请审核我的工作</string>
    <string translatable="false" name="viewpager">ViewPager</string>
    <string translatable="false" name="pull_to_refresh">下拉可以刷新</string>
    <string translatable="false" name="release_to_refresh">释放立即刷新</string>
    <string translatable="false" name="refreshing">正在刷新…</string>
    <string translatable="false" name="not_updated_yet">暂未更新过</string>
    <string translatable="false" name="updated_at">上次更新于%1$s前</string>
    <string translatable="false" name="updated_just_now">刚刚更新</string>
    <string translatable="false" name="time_error">时间有问题</string>
    <string translatable="false" name="refresh_succeed">刷新成功</string>
    <string translatable="false" name="refresh_fail">刷新失败</string>
    <string translatable="false" name="pullup_to_load">上拉加载更多</string>
    <string translatable="false" name="release_to_load">释放立即加载</string>
    <string translatable="false" name="loading">正在加载...</string>
    <string translatable="false" name="confirming">正在提交...</string>
    <string translatable="false" name="load_succeed">加载成功</string>
    <string translatable="false" name="load_fail">加载失败</string>
    <string translatable="false" name="no_user">没有账号？用手机注册</string>
    <string translatable="false" name="use_wifi">直接使用迈外迪免费WiFi！</string>
    <string translatable="false" name="username_hint">账号</string>
    <string translatable="false" name="account_hint">账号名称</string>
    <string translatable="false" name="mobile_hint">请输入手机号</string>
    <string translatable="false" name="mobile_yzm">验证码</string>
    <string translatable="false" name="account_desc">由3-12位数字和字母（区分大小写）组成</string>
    <string translatable="false" name="login_password_desc">至少六位字符</string>
    <string translatable="false" name="login_password_hint">登录密码</string>
    <string translatable="false" name="yzm_hint">请输入验证码</string>
    <string translatable="false" name="password_hint">密码</string>
    <string translatable="false" name="set_password_hint">密码</string>
    <string translatable="false" name="old_password_hint">请输入当前密码</string>
    <string translatable="false" name="new_password_hint">请输入新密码</string>
    <string translatable="false" name="re_password_hint">确认密码</string>
    <string translatable="false" name="msg_hint">短信验证码</string>
    <string translatable="false" name="get_verify">获取短信验证码</string>
    <string translatable="false" name="verify_wrong">验证码错误</string>
    <string translatable="false" name="agree_text">同意无线网络服务条款</string>
    <string translatable="false" name="settings">设置</string>
    <string translatable="false" name="search">搜索</string>
    <string translatable="false" name="aboutus">关于我们</string>
    <string translatable="false" name="push_notify">推送通知</string>
    <string translatable="false" name="check_update">检查更新</string>
    <string translatable="false" name="feed_back">意见反馈</string>
    <string translatable="false" name="feed_back_req">问题反馈</string>
    <string translatable="false" name="about_us">关于我们</string>
    <string translatable="false" name="about">关于</string>
    <string translatable="false" name="upload">上传</string>
    <string translatable="false" name="download">下载</string>
    <string translatable="false" name="start_camera_error">启动相机失败</string>
    <string translatable="false" name="pic_limit_text">网络颠簸，建议单个附件大小不超过5M</string>
    <string translatable="false" name="upload_pic">上传图片</string>
    <string translatable="false" name="device_state_normal">正常运行</string>
    <string translatable="false" name="device_state_15m">超过15分钟未运行</string>
    <string translatable="false" name="device_state_1h">超过1小时未运行</string>
    <string translatable="false" name="device_state_1day">超过1天未运行</string>
    <string translatable="false" name="go_mydevice">查看我的设备</string>
    <string translatable="false" name="device_no_pemission">此设备已被其它商户添加，没有权限查看此设备</string>
    <string translatable="false" name="scan_txm">扫描条形码</string>
    <string translatable="false" name="scan">扫一扫</string>
    <string translatable="false" name="day_limit">只能查询最近30天的数据</string>
    <string translatable="false" name="day_limit2">查询日期不能大于当天</string>
    <string translatable="false" name="ok">确定</string>
    <string translatable="false" name="cancel">取消</string>
    <string translatable="false" name="enum_2">　　</string>
    <string translatable="false" name="edit_user">用户信息修改</string>
    <string translatable="false" name="edit_pwd">密码修改</string>
    <string translatable="false" name="reload">重新加载</string>
    <string translatable="false" name="no_net">联网失败，请重试</string>
    <string translatable="false" name="appointment">预约</string>
    <string translatable="false" name="sign">到店签到</string>
    <string translatable="false" name="fault_fenxi">故障分析</string>
    <string translatable="false" name="check_data">验收数据</string>
    <string translatable="false" name="upload_img">上传图片</string>
    <string translatable="false" name="leave_sign">离店签到</string>
    <string translatable="false" name="confirm_success">提交成功</string>
    <string translatable="false" name="confirm_fail">提交失败</string>
    <string translatable="false" name="comment_success">评论成功</string>
    <string translatable="false" name="zan_success">点赞成功</string>
    <string translatable="false" name="zan_cancel_success">取消点赞成功</string>
    <string translatable="false" name="store_success">收藏成功</string>
    <string translatable="false" name="del_store_success">已取消收藏</string>
    <string translatable="false" name="create_medchart">创建病例</string>
    <string translatable="false" name="medchart_detail">病例详情</string>
    <string translatable="false" name="center_tab_2">临床路径</string>
    <string translatable="false" name="create_readpic">创建病例读片</string>
    <string translatable="false" name="re_password">修改密码</string>
    <string translatable="false" name="re_password_notice">请先修改密码</string>
    <string translatable="false" name="modi_password">修改密码</string>
    <string translatable="false" name="only_choose_num">超出可选图片张数</string>
    <string translatable="false" name="finish">完成</string>
    <string translatable="false" name="invalidSD">sdcard无效或没有插入！</string>
    <string translatable="false" name="photo">选择相册</string>
    <string translatable="false" name="album">相册</string>
    <string translatable="false" name="preview">预览</string>
    <string translatable="false" name="unfinished">完成</string>
    <string translatable="false" name="camera_cancel">取消</string>
    <string translatable="false" name="no_photo">相册没有图片</string>
    <string translatable="false" name="tab_1">咨询</string>
    <string translatable="false" name="tab_2">会议</string>
    <string translatable="false" name="tab_3">医学工具</string>
    <string translatable="false" name="tab_4">我</string>
    <string translatable="false" name="red_pic">读片</string>
    <string translatable="false" name="database">数据库</string>
    <string translatable="false" name="keyan">科研辅助</string>
    <string translatable="false" name="app_vd">应用</string>
    <string translatable="false" name="medchart">病例夹</string>
    <string translatable="false" name="read_pic">病例读片</string>
    <string translatable="false" name="path_way">临床路径</string>
    <string translatable="false" name="consult_guide">诊疗指南</string>
    <string translatable="false" name="my_store">我的收藏</string>
    <string translatable="false" name="my_cmt">我的评论</string>
    <string translatable="false" name="my_search_his">我的检索记录</string>
    <string translatable="false" name="tool_bar">工具箱</string>
    <string translatable="false" name="tools">医学工具</string>
    <string translatable="false" name="patient_trans">患者事务</string>
    <string translatable="false" name="science_art">学术科研</string>
    <string translatable="false" name="persional_info">个人信息</string>
    <string translatable="false" name="modi_persional_info">个人信息</string>
    <string translatable="false" name="save">保存</string>
    <string translatable="false" name="my_all_article">我的全文</string>
    <string translatable="false" name="delete">删除</string>
    <string translatable="false" name="hcardnum">医  院  号</string>
    <string translatable="false" name="bnum">病  例  号</string>
    <string translatable="false" name="snum">科        室</string>
    <string translatable="false" name="user_name">姓        名</string>
    <string translatable="false" name="sex">性        别</string>
    <string translatable="false" name="age">年        龄</string>
    <string translatable="false" name="znum">住  院  号</string>
    <string translatable="false" name="ftime">发病时间</string>
    <string translatable="false" name="btime">起始治疗时间</string>
    <string translatable="false" name="zs">主        诉</string>
    <string translatable="false" name="app_key">23015524</string>
    <string translatable="false" name="umeng_appkey">5424dc93fd98c58ec20289da</string>
    <string translatable="false" name="title_activity_illness_acitivity">IllnessAcitivity</string>
    <string translatable="false" name="hello_world">Hello world!</string>
    <string translatable="false" name="spinner1">1</string>
    <string translatable="false" name="doctor_name">李宁医生</string>

    <string-array name="spinnerarry">
        <item>-3~0</item>
        <item>7</item>
        <item>14±3</item>
        <item>28±3</item>
    </string-array>
    <string-array name="province">
        <item>四川</item>
    </string-array>

    <string translatable="false" name="title_activity_add_combination_drug">AddCombinationDrug</string>
    <string translatable="false" name="title_activity_add_sign_of_life">AddSignOfLifeActivity</string>
    <string translatable="false" name="title_activity_details">DetailsActivity</string>

</resources>