<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@color/title_bar" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="1dp"
            android:background="#ffbf44"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/hin"
                android:padding="5dp"
                android:src="@drawable/male" >
            </ImageView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:gravity="left|center"
                android:minHeight="100dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/doc_name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="left|center"
                    android:text="@string/doctor_name"
                    android:textColor="@color/white_color"
                    android:textSize="20sp" >
                </TextView>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:gravity="left|center"
                    android:text="欢迎您回来！"
                    android:textColor="@color/white_color" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/l2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_margin="1dp"
            android:background="@drawable/selector_oragle_bgbox"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_p1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/electric_his" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_p1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/app_case_db"
                android:textColor="#40b9a9"
                android:textSize="20sp" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/l3"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_margin="1dp"
            android:background="@drawable/selector_oragle_bgbox"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_p2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/pub_infos" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_p2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/app_pub_infos"
                android:textColor="#40b9a9"
                android:textSize="20sp" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>